Fixed centering Bugzilla bottom on mobile https://bugs.webkit.org/show_bug.cgi?id=283512
Reviewed by Tim Nguyen.

Canonical link: https://commits.webkit.org/286980@main

--- a/Websites/bugs.webkit.org/skins/custom/global.css
+++ b/Websites/bugs.webkit.org/skins/custom/global.css
@@ -2873,7 +2873,8 @@ table.file_table {
 
 @media only screen and (max-width: 415px) {
     #titles,
-    #header .links {
+    #header .links,
+    #footer .links {
        text-align: center;
     }
 
